# hw3-DanielPorter

./: Makefile  README.md  ai_documentation.txt  environment.yml  myst.yml  pyproject.toml
.github/workflows/: deploy.yml  pages.yml
_build/logs/: myst.build.json
ligotools/: utils.py
ligotools/tests/: test_readligo.py  test_utils.py
