[build-system]
requires = ["hatchling", "numpy>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ligotools"
version = "0.1.0"
description = "Utils for hw 3 for stat 159 (ligotools functions)"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Ligo Scientific Collaboration (LSC), Daniel Porter" }
]

dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.5",
  "h5py>=3.6",
]
